--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,24 @@
     <string name="title_cult">Cult</string>
     <string name="title_fix">Fix</string>
     <string name="title_resources">Resources</string>
+    <string name="title_login">Login</string>
+    <string name="title_signup">Sign Up</string>
+    <string name="title_password">Password</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_about">About</string>
+    <string name="title_help">Help</string>
+    <string name="title_logout">Logout</string>
+    <string name="title_forgot_password">Forgot Password</string>
+    <string name="title_reset_password">Reset Password</string>
+    <string name="title_change_password">Change Password</string>
+    <string name="title_change_email">Change Email</string>
+    <string name="title_change_username">Change Username</string>
+    <string name="title_change_profile_picture">Change Profile Picture</string>
+    <string name="title_change_theme">Change Theme</string>
+    <string name="title_change_language">Change Language</string>
+    <string name="title_google_signin">Continue with Google</string>
+    <string name="prompt_email">Email</string>
+    <string name="action_sign_in_short">Sign In</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign In</string>
 </resources>
